🎨 style(global.css): add margin to heading elements 📝 docs(blog): update github link in frontmatter This commit adds margin to the bottom and top of heading elements to improve readability and separation of content. The github link in the frontmatter of the blog post has been updated to point to the correct repository.

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -23,6 +23,8 @@ h4,
 h5,
 h6 {
   word-wrap: break-word;
+  margin-bottom: 1rem;
+  margin-top: 0.5rem;
 }
 :root {
   --_hue: 235;
